[package]
authors = ["Louis Thiery <louis@helium.com>",
           "Robert Keith <robert@helium.com"]
edition = "2018"
readme = "README.md"
name = "helios"
version = "0.1.0"

[package.metadata.docs.rs]
features = ["stm32l0x2", "rt"]

[dependencies]
embedded-hal = { version = "0.2.2", features = ["unproven"] }
cortex-m = {version = "0.5.8", features = ["const-fn"] }
cortex-m-rt = "0.6.8"
cortex-m-semihosting = "0.3.2"
cortex-m-rtfm = "0.4.3"
void = { version = "1.0.2", default-features = false }
cast = { version = "0.2.2", default-features = false }
nb = "0.1.2"
panic-semihosting       = "0.5.2"

[dependencies.sx1276]
git                     = "https://github.com/lthiery/sx1276-rs.git"
branch					= "master"


[dependencies.stm32l0xx-hal]
git                     = "https://github.com/lthiery/stm32l0xx-hal.git"
branch					= "master"
features                = ["stm32l0x2","rt"]


[profile.dev]
codegen-units = 1
incremental = false
debug = true
opt-level = "s"

[profile.release]
codegen-units = 1
lto = true
debug = true
opt-level = "s"
panic = "abort"
